--- a/2021-1/apunte/config-definiciones.tex
+++ b/2021-1/apunte/config-definiciones.tex
@@ -120,6 +120,7 @@
 \newcommand{\F}{\mathbb F}
 \newcommand{\Z}{\mathbb Z}
 \newcommand{\sen}{\operatorname{sen}}
+\newcommand{\nodivide}{\operatorname{\not|\,}}
 \newcommand \mcd{\operatorname{mcd}}
 \newcommand \mcm{\operatorname{mcm}}
 \newcommand \circled[1]{\tikz[baseline=(char.base)]{
