--- a/2021-1/apunte/main.tex
+++ b/2021-1/apunte/main.tex
@@ -5,7 +5,7 @@
 \makeindex  
 \input{classicthesis-config}
 \input{config-definiciones}
-
+\tolerance=10000
 \begin{document}
 	%\baselineskip=0.55truecm %original
 	%\baselineskip=0.43truecm
