--- a/2021-1/apunte/Cap.06.tex
+++ b/2021-1/apunte/Cap.06.tex
@@ -303,25 +303,26 @@ En forma más detallada, el algoritmo puede ser implementado con el siguiente ps
 
 \vskip .5cm
 
-\begin{minipage}{400pt}
+\begin{minipage}{0.95\textwidth}
 \noindent \textsc{Algoritmo de Prim}
 \vskip .2cm
 \begin{small}
 \begin{verbatim}
-# pre: G grafo con vértices 1,...,n y pesos w(i,j)
+# pre: G grafo con vértices 0,...,n y pesos w(i,j)
 #      (w(i,j) = infinito si ij no es arista de G)
 # post: devuelve F un MST de G
-S = [1] # lista de vértices utilizados en el MST (comienza con 1)
-Q = [2,...,n]  # lista de vértices aún no utilizados en el MST
-L = [[2,1,p2],...,[n,1,pn]]]  # con pi = w(i,1)
-# se irá modificando L de tal forma que si Q = [u1,...,ur], 
-# L  = [[u1,v1,p1],...,[ur,vr,pr]] donde 
+S = [0] # lista de vértices utilizados en el MST (comienza con 0)
+Q = [1,...,n]  # lista de vértices aún no utilizados en el MST
+L = [[1,0,p1],...,[n,0,pn]]]  # con pi = w(i,0)
+# se irá modificando L de tal forma que si Q = [u0,...,ur], 
+# L  = [[u0,v0,p0],...,[ur,vr,pr]] donde 
 # vi = vértice en S adyacente a ui tal que w(ui,vi) es mínimo, 
 # pi = w(ui,vi)
-F = grafo con vértices 1,...,n y sin aristas.
+F = [[],...,[]] # grafo con vértices 0,...,n y sin aristas.
 while Q != []:
     uk = vértice en Q tal que pk = w(uk,vk) es mínimo
-    F.append(arista uk,vk)
+    F[uk].append(vk)
+    F[vk].append(uk) # agrega arista uk vk a F
     Q = Q - {uk}
     S.append(uk)
     L = L - {[uk,vk,pk]}
